code25_all/swift/24144557.txt
UInt32
let randomLetterNumber = arc4random()%26

if letters.count > randomLetterNumber{
    var randomLetter = letters[randomLetterNumber]
}

Playground execution failed: error: <REPL>:11:18: error: could not find an overload for '>' that accepts the supplied arguments
if letters.count > randomLetterNumber{
   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~

UInt32
Int
randomLetterNumber
Int
let randomLetterUNumber : Int = arc4random()%26
let randomLetterUNumber = arc4random()%26 as Int

could not find an overload for '%' that accepts the supplied arguments.
